Tue Feb 10 05:39:28 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
          revision bump.

Mon Feb 09 12:01:28 CST 2009  Phil Mesnier  <mesnier_p@ociweb.com>

	* CIAO version 0.6.8 released.

Fri Jan 30 11:59:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/Messenger/Administrator_Client_IDL3.mpc:
          Added missing after

Wed Jan 28 20:22:52 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/ciao_tests.lst:

          This file moved here from $ACE_ROOT/bin, see bug 2748 and the
          ACE ChangeLog entry for Wed Jan 28 20:22:45 UTC 2009.

Mon Jan 12 19:14:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Config_Handlers.mpc:
          Don't add template files to the source files

Fri Jan  9 22:18:07 UTC 2009  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Minimum/Receiver/Receiver.mpc:
        * tests/Minimum/Sender/Sender.mpc:

          Append "Minimum_" to the name of the generated libraries. The generated
          libraries had the same name as those in $CIAO_ROOT/DevGuideExamples/Messenger
          which cause some regression tests to fail.

Wed Jan  7 15:11:48 UTC 2009  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * DevGuideExamples/Messenger/Administrator.mpc:
        * DevGuideExamples/Messenger/Receiver.mpc:

          Fixed build order dependency.

Tue Jan  6 20:45:19 UTC 2009  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * DevGuideExamples/Messenger/Administrator_exec_export.h:
        * DevGuideExamples/Messenger/Administrator_stub_export.h:
        * DevGuideExamples/Messenger/Administrator_svnt_export.h:
        * DevGuideExamples/Messenger/Messenger_exec_export.h:
        * DevGuideExamples/Messenger/Messenger_stub_export.h:
        * DevGuideExamples/Messenger/Messenger_svnt_export.h:
        * DevGuideExamples/Messenger/Receiver_exec_export.h:
        * DevGuideExamples/Messenger/Receiver_stub_export.h: