@@ -1,3 +1,8 @@
+Wed Feb 11 07:21:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tools/Config_Handlers/XSCRT/Elements.hpp:
+          Removed old code
+
 Tue Feb 10 05:39:28 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * NEWS:
